--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@theme{
-    --font-Inter:"Inter",sans-serif;
-    --font-gambrino:"gambrino",;
+@theme {
+  --font-Inter: "Inter", sans-serif;
+  --font-gambarino: "Playfair Display", serif;
 }
